Add printing of succeeding syscalls only

--- a/Makefile.am
+++ b/Makefile.am
@@ -234,6 +234,8 @@ strace_SOURCES =	\
 	structured-inlines.h	\
 	structured_fmt_text.c	\
 	structured_fmt_text.h	\
+	structured_fmt_text_z.c	\
+	structured_fmt_text_z.h	\
 	structured_fmt_json.c	\
 	structured_fmt_json.h	\
 	structured_iov.h	\
